echo-server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: echo-server
  name: echo-server
  namespace: kube-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - image: registry.cn-shenzhen.aliyuncs.com/k8shub/echoserver:1.10
        imagePullPolicy: IfNotPresent
        name: echo-server
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 400Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: kube-devops
  labels:
    k8s-app: echo-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: echo-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  namespace: kube-devops
  labels:
    k8s-app: echo-server
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - echo.test.app
    secretName: apps-cert
  rules:
  - host: echo.test.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port: 
              number: 80
